[gd_scene load_steps=30 format=3 uid="uid://dc42x16lyph7c"]

[ext_resource type="Script" uid="uid://bhvg63jhnpos1" path="res://Scripts/Interfaz/selector_personajes.gd" id="1_0wu1u"]
[ext_resource type="Texture2D" uid="uid://be2stv0t7inhk" path="res://Sprites/fondo_selector.png" id="2_gmxq8"]
[ext_resource type="Texture2D" uid="uid://bnv5cd248b37w" path="res://Sprites/Vikingo/selector_viki-Sheet.png" id="3_by8vm"]
[ext_resource type="StyleBox" uid="uid://crtilaosn66p8" path="res://Scenes/UI/ui_fondos/selector_personajes.tres" id="3_oe3cv"]
[ext_resource type="LabelSettings" uid="uid://boqdkocgf1jjn" path="res://Scenes/UI/UI_laber_settings/inicioTexts.tres" id="3_qu4mg"]
[ext_resource type="Texture2D" uid="uid://enii75c3plnd" path="res://Sprites/Vikingo/transicion_viki-Sheet.png" id="4_2lv8s"]
[ext_resource type="LabelSettings" uid="uid://b3wfqidqjwq8f" path="res://Scenes/UI/UI_laber_settings/inicioTexts24.tres" id="4_hmx1f"]
[ext_resource type="Texture2D" uid="uid://md6dnx6dva5e" path="res://Sprites/Vikingo/vikingo_seleccionado-Sheet.png" id="5_gu2w8"]
[ext_resource type="Texture2D" uid="uid://dag5xjubuyi0r" path="res://Sprites/Guerrera/selector_valki-Sheet.png" id="6_5xpv3"]
[ext_resource type="Texture2D" uid="uid://7080jyv6xgn0" path="res://Sprites/Guerrera/transicion_valki-Sheet.png" id="6_wprnk"]
[ext_resource type="Texture2D" uid="uid://c3v237ki5nf82" path="res://Sprites/Guerrera/valkiria_seleccionada-Sheet-export.png" id="7_od41f"]
[ext_resource type="Texture2D" uid="uid://d0kcxtgl45m5j" path="res://Sprites/Arquero/selector_arque-Sheet.png" id="8_aju4g"]
[ext_resource type="Texture2D" uid="uid://cpvvu0m2hx50e" path="res://Sprites/Arquero/transicion_arquero-Sheet.png" id="9_bjsyv"]
[ext_resource type="Texture2D" uid="uid://c11oxobwnn5m3" path="res://Sprites/Arquero/arquero_seleccionado-Sheet.png" id="10_pjoqn"]

[sub_resource type="Animation" id="Animation_dcmhm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vikingo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_12a5d"]
resource_name = "seleccionado"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vikingo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_gu2w8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vikingo:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Vikingo:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_1a7ns"]
resource_name = "selector"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vikingo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_by8vm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vikingo:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Vikingo:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rxjyw"]
resource_name = "transicion"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vikingo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_2lv8s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vikingo:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Vikingo:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jry54"]
_data = {
&"RESET": SubResource("Animation_dcmhm"),
&"seleccionado": SubResource("Animation_12a5d"),
&"selector": SubResource("Animation_1a7ns"),
&"transicion": SubResource("Animation_rxjyw")
}

[sub_resource type="Animation" id="Animation_pfrlb"]
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Valkiria:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Valkiria:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_wprnk")]
}

[sub_resource type="Animation" id="Animation_q00ny"]
resource_name = "seleccionado"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Valkiria:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_od41f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Valkiria:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rqryl"]
resource_name = "seleccion"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Valkiria:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_5xpv3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Valkiria:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_m82ex"]
resource_name = "transicion"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Valkiria:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Valkiria:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_wprnk")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a28i3"]
_data = {
&"RESET": SubResource("Animation_pfrlb"),
&"seleccionado": SubResource("Animation_q00ny"),
&"selector": SubResource("Animation_rqryl"),
&"transicion": SubResource("Animation_m82ex")
}

[sub_resource type="Animation" id="Animation_q0imo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arquero:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_wtpx7"]
resource_name = "seleccionado"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arquero:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_pjoqn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arquero:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arquero:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_s5ftp"]
resource_name = "selector"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arquero:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_aju4g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arquero:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arquero:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_p3e3t"]
resource_name = "transicion"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arquero:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_bjsyv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arquero:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Arquero:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jq7ts"]
_data = {
&"RESET": SubResource("Animation_q0imo"),
&"seleccionado": SubResource("Animation_wtpx7"),
&"selector": SubResource("Animation_s5ftp"),
&"transicion": SubResource("Animation_p3e3t")
}

[node name="selectorPersonajes" type="Node2D"]
script = ExtResource("1_0wu1u")

[node name="Dormitorio" type="Sprite2D" parent="."]
position = Vector2(349, 180)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_gmxq8")

[node name="ArqueroInfo" type="Panel" parent="."]
visible = false
z_index = 2
offset_left = 47.0
offset_top = 155.0
offset_right = 486.0
offset_bottom = 285.0
theme_override_styles/panel = ExtResource("3_oe3cv")

[node name="VBoxContainer" type="VBoxContainer" parent="ArqueroInfo"]
layout_mode = 0
offset_right = 434.0
offset_bottom = 130.0

[node name="Nombre" type="Label" parent="ArqueroInfo/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 0
text = "pers_arq_nom"
label_settings = ExtResource("4_hmx1f")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect" type="ColorRect" parent="ArqueroInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 2

[node name="Historia" type="Label" parent="ArqueroInfo/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 6
text = "pers_arq_his"
label_settings = ExtResource("3_qu4mg")
vertical_alignment = 1
autowrap_mode = 3
ellipsis_char = ""
language = "es_ES"

[node name="ColorRect2" type="ColorRect" parent="ArqueroInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ArqueroInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Vida" type="Label" parent="ArqueroInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 0
text = "50"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect2" type="ColorRect" parent="ArqueroInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Velocidad" type="Label" parent="ArqueroInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 6
text = "pers_arq_vel"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect3" type="ColorRect" parent="ArqueroInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Arma" type="Label" parent="ArqueroInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 10
text = "pers_arq_arm"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ValkiriaInfo" type="Panel" parent="."]
visible = false
z_index = 2
offset_left = 117.0
offset_top = 224.0
offset_right = 556.0
offset_bottom = 354.0
theme_override_styles/panel = ExtResource("3_oe3cv")

[node name="VBoxContainer" type="VBoxContainer" parent="ValkiriaInfo"]
layout_mode = 0
offset_right = 441.0
offset_bottom = 129.0

[node name="Nombre" type="Label" parent="ValkiriaInfo/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 0
text = "pers_valk_nom"
label_settings = ExtResource("4_hmx1f")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect" type="ColorRect" parent="ValkiriaInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 2

[node name="Historia" type="Label" parent="ValkiriaInfo/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 6
text = "pers_valk_his"
label_settings = ExtResource("3_qu4mg")
vertical_alignment = 1
autowrap_mode = 3
ellipsis_char = ""
language = "es_ES"

[node name="ColorRect2" type="ColorRect" parent="ValkiriaInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ValkiriaInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Vida" type="Label" parent="ValkiriaInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 0
text = "100"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect2" type="ColorRect" parent="ValkiriaInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Velocidad" type="Label" parent="ValkiriaInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 6
text = "pers_valk_vel"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect3" type="ColorRect" parent="ValkiriaInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Arma" type="Label" parent="ValkiriaInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 10
text = "pers_valk_arm"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="VikingoInfo" type="Panel" parent="."]
visible = false
z_index = 2
offset_left = 222.0
offset_top = 162.0
offset_right = 656.0
offset_bottom = 292.0
theme_override_styles/panel = ExtResource("3_oe3cv")

[node name="VBoxContainer" type="VBoxContainer" parent="VikingoInfo"]
layout_mode = 0
offset_right = 435.0
offset_bottom = 130.0

[node name="Nombre" type="Label" parent="VikingoInfo/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 0
text = "pers_vik_nom"
label_settings = ExtResource("4_hmx1f")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect" type="ColorRect" parent="VikingoInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 2

[node name="Historia" type="Label" parent="VikingoInfo/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 6
text = "pers_vik_his"
label_settings = ExtResource("3_qu4mg")
vertical_alignment = 1
autowrap_mode = 3
ellipsis_char = ""
language = "es_ES"

[node name="ColorRect2" type="ColorRect" parent="VikingoInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VikingoInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Vida" type="Label" parent="VikingoInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 0
text = "150"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect2" type="ColorRect" parent="VikingoInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Velocidad" type="Label" parent="VikingoInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 6
text = "pers_vik_vel"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="ColorRect3" type="ColorRect" parent="VikingoInfo/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Arma" type="Label" parent="VikingoInfo/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
z_index = 1
layout_mode = 2
size_flags_horizontal = 10
text = "pers_vik_arm"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 1
vertical_alignment = 1
language = "es_ES"

[node name="TextoSalir" type="TextureRect" parent="."]
z_index = 2
offset_left = 531.0
offset_top = 8.0
offset_right = 688.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="TextoSalir"]
auto_translate_mode = 1
layout_mode = 0
offset_left = -314.0
offset_right = 134.0
offset_bottom = 23.0
text = "gen_salir"
label_settings = ExtResource("3_qu4mg")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3
language = "es_ES"

[node name="Vikingo" type="Sprite2D" parent="."]
position = Vector2(183, 216)
scale = Vector2(2, 2)
texture = ExtResource("3_by8vm")
hframes = 6
frame = 1

[node name="Vikingo" type="AnimationPlayer" parent="Vikingo"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_jry54")
}

[node name="Valkiria" type="Sprite2D" parent="."]
position = Vector2(339, 149)
scale = Vector2(2, 2)
texture = ExtResource("6_wprnk")
hframes = 6
frame = 1

[node name="Valkiria" type="AnimationPlayer" parent="Valkiria"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_a28i3")
}

[node name="Arquero" type="Sprite2D" parent="."]
position = Vector2(536, 221)
scale = Vector2(2, 2)
texture = ExtResource("9_bjsyv")
hframes = 6
frame = 1

[node name="Arquero" type="AnimationPlayer" parent="Arquero"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_jq7ts")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(351, 181)
zoom = Vector2(3, 3)
